--- a/.github/workflows/ghpages.yaml
+++ b/.github/workflows/ghpages.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - uses: Embraser01/update-git-branch-action@v1.0.0
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/master'
       with:
         branch: sample
         force: 1 # To push-force to the branch
